# Database_backup_utility

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
core/: IBackupStrategy.hpp  IDatabaseConnector.hpp
